--- a/base/templates/base/index.html
+++ b/base/templates/base/index.html
@@ -7,7 +7,7 @@
         >
             <h1 class="h3 mb-0 text-gray-800">داشبورد</h1>
             <a
-                    href="#"
+                    href="{% url 'export-excel' %}"
                     class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"
             ><i class="fas fa-eye fa-sm text-white-50"></i> دیدن
                 کارنامه
