--- a/templates/main.html
+++ b/templates/main.html
@@ -285,7 +285,7 @@
                     <!-- Nav Item -      Alerts -->
                     <li class="nav-item dropdown no-arrow mx-1" dir="rtl">
                         <a
-                                class="nav-link"
+                                class="nav-link text-primary"
                                 href="#"
                                 id="alertsDropdown"
                                 role="button"
@@ -374,7 +374,7 @@
     <!-- End of Page Wrapper -->
 
     <!-- Scroll to Top Button-->
-    <a class="scroll-to-top rounded" href="#page-top">
+    <a class="scroll-to-top rounded" href="#page-top toggled">
         <i class="fas fa-angle-up"></i>
     </a>
 
